# BundesPredict

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml  refit.yml
alembic/: env.py
alembic/versions/: 396d24a49ad7_add_players_and_squad_values.py  42af0f968a5c_add_fixtures_table.py  60d23bc4d0b1_add_predictions_table.py  89302ee3bc50_add_model_runs_and_team_params.py  c43fb31ecba5_create_teams_team_aliases_matches.py  dfeb2f438d50_add_understat_xg_to_matches_and_xg_coef_.py  eb47dc806305_add_closing_1x2_odds_to_matches.py
apps/api/app/: __init__.py  config.py  deps.py  main.py  predict.py  schemas.py
apps/web/: package-lock.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/components/: AdjustmentsPanel.tsx  Explanation.tsx  MarketsPanel.tsx  ProbBars.tsx  ResultCard.tsx  ScoreHeatmap.tsx  StageList.tsx
apps/web/lib/: api.ts
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml
notebooks/: eda.ipynb
reports/: backtest_report.md
scripts/: download_fixtures.py  download_seasons.py  eval_promoted_prior.py  refit.py  run_backtest.py  scrape_transfermarkt.py  scrape_understat.py
src/bundespredict/: __init__.py
src/bundespredict/agent/: __init__.py  adjustments.py  adjustments.yaml  loop.py  players.json  players.py  prompt.py  service.py  tools.py
src/bundespredict/data/: __init__.py  db.py  fixtures.py  form.py  ingest.py  loader.py  models.py  params_store.py  parse.py  players.py  predictions_store.py  results.py  team_aliases.py  transfermarkt.py  understat.py  weather.py
src/bundespredict/eval/: __init__.py  backtest.py  betting.py  market.py  metrics.py
src/bundespredict/model/: __init__.py  adjust.py  blend.py  calibration.py  dixon_coles.py  markets.py  shrinkage.py  time_decay.py  xg_offset.py
tests/: conftest.py  test_health.py
tests/agent/: fakes.py  test_adjustments.py  test_grounding.py  test_live_smoke.py  test_loop.py  test_persistence.py  test_players.py  test_tools.py
tests/api/: test_predict.py
tests/data/: conftest.py  test_fixtures.py  test_form.py  test_ingest.py  test_loader.py  test_migrations.py  test_params_store.py  test_parse.py  test_players.py  test_results.py  test_team_aliases.py  test_transfermarkt.py  test_understat.py  test_weather.py
tests/data/fixtures/: D1_9999.csv  open_meteo_forecast.json  openligadb_sample.json  understat_sample.json
tests/eval/: test_backtest.py  test_betting.py  test_market.py  test_metrics.py
tests/model/: test_adjust.py  test_blend.py  test_calibration.py  test_dixon_coles.py  test_markets.py  test_shrinkage.py  test_time_decay.py  test_xg_fit.py  test_xg_offset.py
