[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bundespredict"
version = "0.0.0"
description = "Bundesliga match-outcome predictor: a calibrated Dixon-Coles Poisson engine with an LLM adjustment/explanation layer."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

# The numerical/model stack isn't needed yet; keep it optional so the base install
# stays small and CI is fast. Install with: pip install -e ".[model]"
[project.optional-dependencies]
model = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "scikit-learn>=1.5",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
# Two source roots: the pure model/data/agent/eval library, and the FastAPI app.
where = ["src", "apps/api"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "apps/api", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "apps/api", "tests"]
# numpy/scipy/pandas types get added once those are in use; nothing imports them yet.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
